# chuchichaestli

./: 404.html  README.md  default.nix  flake.nix  hatch_build.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: ci.yaml
.github/workflows/: build-package.yml  context-testing.yml  deploy-docs.yml  github-release.yml  on_branches.yml  on_dispatch.yml  on_merge.yml  on_pr.yml  on_push.yml  publish-to-pypi.yaml  publish-to-pypi.yml  python-package.yaml  test-install.yml
csrc/ode/: bindings.cpp  euler_kernel.cu  lode_kernel.cu  ode_solvers.cu  rk4_kernel.cu
data/mnist_h5_tests/test_scenario_1/: mnist_test_1.h5
data/mnist_h5_tests/test_scenario_10/: mnist_test_10.h5
data/mnist_h5_tests/test_scenario_11/val/: mnist_test_val_01.h5
data/mnist_h5_tests/test_scenario_12/val/: mnist_test_val_00.h5
data/mnist_h5_tests/test_scenario_13/train/: mnist_test_train_00.h5
data/mnist_h5_tests/test_scenario_2/: mnist_test_2.h5
data/mnist_h5_tests/test_scenario_3/: mnist_test_3.h5
data/mnist_h5_tests/test_scenario_4/: mnist_test_4.h5
data/mnist_h5_tests/test_scenario_5/test/: mnist_test_test_0.h5  mnist_test_test_1.h5  mnist_test_test_2.h5
data/mnist_h5_tests/test_scenario_5/train/: mnist_test_train_0.h5  mnist_test_train_1.h5  mnist_test_train_2.h5
data/mnist_h5_tests/test_scenario_5/val/: mnist_test_val_0.h5  mnist_test_val_1.h5  mnist_test_val_2.h5
data/mnist_h5_tests/test_scenario_6/test/: mnist_test_test_0.h5  mnist_test_test_1.h5  mnist_test_test_2.h5
data/mnist_h5_tests/test_scenario_6/train/: mnist_test_train_0.h5  mnist_test_train_1.h5  mnist_test_train_2.h5
data/mnist_h5_tests/test_scenario_6/val/: mnist_test_val_0.h5  mnist_test_val_1.h5  mnist_test_val_2.h5
data/mnist_h5_tests/test_scenario_7/test/: mnist_test_test_0.h5  mnist_test_test_1.h5  mnist_test_test_2.h5
data/mnist_h5_tests/test_scenario_7/train/: mnist_test_train_0.h5  mnist_test_train_1.h5  mnist_test_train_2.h5
data/mnist_h5_tests/test_scenario_7/val/: mnist_test_val_0.h5  mnist_test_val_1.h5  mnist_test_val_2.h5
data/mnist_h5_tests/test_scenario_8/test/: mnist_test_test_10.h5  mnist_test_test_11.h5  mnist_test_test_12.h5  mnist_test_test_13.h5  mnist_test_test_14.h5
data/mnist_h5_tests/test_scenario_8/train/: mnist_test_train_00.h5  mnist_test_train_01.h5  mnist_test_train_02.h5  mnist_test_train_03.h5  mnist_test_train_04.h5
data/mnist_h5_tests/test_scenario_8/val/: mnist_test_val_05.h5  mnist_test_val_06.h5  mnist_test_val_07.h5  mnist_test_val_08.h5  mnist_test_val_09.h5
data/mnist_h5_tests/test_scenario_9/test/: mnist_test_test_01.h5  mnist_test_test_02.h5  mnist_test_test_03.h5  mnist_test_test_04.h5
data/mnist_h5_tests/test_scenario_9/train/: mnist_test_train_00.h5  mnist_test_train_01.h5  mnist_test_train_02.h5  mnist_test_train_03.h5  mnist_test_train_04.h5
data/mnist_h5_tests/test_scenario_9/val/: mnist_test_val_02.h5  mnist_test_val_03.h5
docs/: index.md  install.md  reference.md  usage.md
docs/stylesheets/: extra.css
examples/: pipelines_example.py
install/: index.html
reference/: index.html
reference/chuchichaestli/: index.html
reference/chuchichaestli/data/: index.html
reference/chuchichaestli/data/cache/: index.html
reference/chuchichaestli/data/dataset/: index.html
reference/chuchichaestli/debug/: index.html
reference/chuchichaestli/debug/memory_usage/: index.html
reference/chuchichaestli/debug/visitor/: index.html
reference/chuchichaestli/diffusion/: index.html
reference/chuchichaestli/diffusion/ddpm/: index.html
reference/chuchichaestli/diffusion/distributions/: index.html
reference/chuchichaestli/metrics/: index.html
reference/chuchichaestli/metrics/base/: index.html
reference/chuchichaestli/metrics/fid/: index.html
reference/chuchichaestli/metrics/functional/: index.html
reference/chuchichaestli/metrics/lpips/: index.html
reference/chuchichaestli/metrics/mse/: index.html
reference/chuchichaestli/models/: index.html
reference/chuchichaestli/utils/: index.html
search/: search_index.json
src/chuchichaestli/: __about__.py  __init__.py  utils.py
src/chuchichaestli/data/: __init__.py  cache.py  dataset.py
src/chuchichaestli/debug/: __init__.py  memory_usage.py  visitor.py
src/chuchichaestli/diffusion/: __init__.py  base.py  ddpm.py  distributions.py  ilvr.py  indi.py  prior_grad.py
src/chuchichaestli/injectables/: __init__.py  batchfetch.py  bätchfätch.py  diffusion.py  typedefs.py
src/chuchichaestli/metrics/: __init__.py  base.py  fd.py  fid.py  frechet_distance.py  functional.py  lpips.py  mse.py  psnr.py  representations.py  ssim.py
src/chuchichaestli/models/: __init__.py  activations.py  attention.py  blocks.py  downsampling.py  maps.py  norm.py  normalization.py  resnet.py  upsampling.py
src/chuchichaestli/ode/: __init__.py  euler.py  func.py  lode.py  rk4.py  solvers.py
src/chuchichaestli/pipelines/: __init__.py  autoencoder.py  cgan.py  decoder.py  diffusion.py  encoder.py  inference.py  train.py
src/chuchichaestli/utils/: __init__.py  formatting.py  functools.py  modules.py
tests/: _test_attention.py  conftest.py  local_test_dataset.py  test_attention.py  test_attention_conv.py  test_attention_gate.py  test_autoencoder.py  test_autoencoder_blocks.py  test_batchfetch.py  test_bbdm.py  test_cache.py  test_cfgddpm.py  test_dataset.py  test_dcae.py  test_ddim.py  test_ddpm.py  test_device_handling.py  test_discriminator.py  test_downsampling.py  test_fd.py  test_fid.py  test_frechet_distance.py  test_fätch.py  test_ilvr.py  test_indi.py  test_injectables_condbase.py  test_lpips.py  test_metrics_base.py  test_metrics_functional.py  test_mse.py  test_multiscale_attention.py  test_patchgan.py  test_pipelines.py  test_prior_grad.py  test_psnr.py  test_resnet.py  test_ssim.py  test_unet.py  test_unet_blocks.py  test_unet_time_embeddings.py  (+4 more)
tests/references/: README.md  test_self_attention_1d.py
usage/: index.html
(+82 files in other folders)
